# josh_working_functions

./: .gitignore  host.json  local.settings.json  pyproject.toml  readme.md  requirements.txt
createNote/: __init__.py
getNote/: __init__.py  function.json
getNotes/: Pipfile  __init__.py
sendEmail/: __init__.py  function.json
